# starsector-font-replacer

./: .gitignore  HITL_CHECKLIST.md  LICENSE  README.md  build_exe.ps1  pyproject.toml
src/starsector_fontgen/: __init__.py  analyze_cli.py  analyzer.py  bmfont.py  build_pack_cli.py  charset_filter.py  cli.py  errors.py  filter_cli.py  generator.py  gui.py  installer.py  pack_builder.py  rebuild_cli.py  rebuild_fontlib.py  scanner.py
src/starsector_fontgen.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
test_texts/: sample.txt
tests/: test_analyze_cli.py  test_analyzer.py  test_bmfont.py  test_build_exe_script.py  test_build_pack_cli.py  test_charset_filter.py  test_cli.py  test_filter_cli.py  test_generator_units.py  test_gui_entry.py  test_installer.py  test_pack_builder.py  test_rebuild_cli.py  test_rebuild_fontlib.py  test_scanner.py
