[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "starsector-fontgen"
version = "0.1.0"
description = "Generate Starsector-compatible AngelCode BMFont files from TTF/OTF fonts."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Starsector FontGen Contributors" },
]
dependencies = [
  "Pillow>=10",
  "fonttools>=4",
]

[project.optional-dependencies]
exe = [
  "pyinstaller>=6",
]

[project.scripts]
starsector-fontgen = "starsector_fontgen.cli:main"
starsector-fontgen-analyze-fontlib = "starsector_fontgen.analyze_cli:main"
starsector-fontgen-filter-charset = "starsector_fontgen.filter_cli:main"
starsector-fontgen-rebuild-fontlib = "starsector_fontgen.rebuild_cli:main"
starsector-fontgen-build-pack = "starsector_fontgen.build_pack_cli:main"
starsector-fontgen-gui = "starsector_fontgen.gui:main"

[tool.setuptools.packages.find]
where = ["src"]
